Update Readme with guide, and some other infos